web/style.css
* {
    font-family: Montserrat;
    user-select: none;
}

html, body {
    margin: 0;
    padding: 0;
    height: 100%;
    --scale: 1vw;
    background-color: black;
}

.container {
    aspect-ratio: 2 / 1;
    /* width: 100%; */
    max-width: 100vw;
    max-height: 100vh;
    background-color: lightgray;
    display: grid;
    grid-template-rows: calc(var(--scale) * 5) calc(var(--scale) * 35) calc(var(--scale) * 10);
    font-size: calc(var(--scale));
    position: absolute;
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    margin: auto;
}

.top-section {
    background-color: gray;
    display: grid;
    grid-template-columns: calc(var(--scale) * 15) calc(var(--scale) * 15);
}

.middle-section {
    display: grid;
    grid-template-columns: auto auto;
}

.middle-left-section, .middle-right-section {
    overflow-y: scroll;
}

.bottom-section {
    background-color: gray;
    display: grid;
    grid-template-columns: calc(var(--scale) * 10) calc(var(--scale) * 90);
}

.bottom-right-section {
    display: grid;
    grid-template-rows: calc(var(--scale) * 5) calc(var(--scale) * 5);
}

.bottom-right-section div {
    display: grid;
    grid-template-columns: repeat(5, calc(var(--scale) * 18));
}

.bottom-left-section {
    display: grid;
    grid-template-rows: 50% 50%;
}

#fixtures {
    display: grid;
    grid-template-columns: auto;
}

input, select {
    font-size: calc(var(--scale) * 2);
}

input:checked + label {
    color: orange;
}

label:hover {
    color: blue;
}

label {
    transition-duration: .1s;
    font-size: calc(var(--scale) * 2);
}

label:hover {
    cursor: pointer;
}

button {
    background-color: gray;
    transition-duration: .1s;
    border-radius: calc(var(--scale) * 1);
    border: rgb(61, 61, 61) solid calc(var(--scale) * 0.2);
    font-size: calc(var(--scale));
    height: 100%;
    padding: 0px;
}

button:hover {
    background-color: lightgray;
    cursor: pointer;
}

button.selected {
    background-color: orange;
}

@media (min-aspect-ratio: 2/1) {
    html, body {
        --scale: 2vh;
    }
}

.menu {
    width: calc(var(--scale) * 90);
    height: calc(var(--scale) * 45);
    position: absolute;
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    margin: auto;
    background-color: rgb(65, 65, 65);
    border-radius: calc(var(--scale) * 1);
    display: none;
    /* display: grid; */
    grid-template-rows: calc(var(--scale) * 5) auto auto;
    box-shadow: 0px 0px calc(var(--scale) * 1) calc(var(--scale) * 0.5) black;
    color: lightgray;
}

.menu-top-section {
    display: grid;
    grid-template-columns: calc(var(--scale) * 15) calc(var(--scale) * 15) calc(var(--scale) * 5);
}

.menu-bottom-section {
    display: grid;
    grid-template-rows: calc(var(--scale) * 5) auto;
}

.menu-bottom-top-section {
    display: grid;
    grid-template-columns: calc(var(--scale) * 15) calc(var(--scale) * 15) calc(var(--scale) * 15) calc(var(--scale) * 15);
}

.menu-bottom-bottom-section {
    display: grid;
}

button.exit-button {
    font-size: calc(var(--scale) * 2.5);
    width: calc(var(--scale) * 5);
    margin-left: calc(var(--scale) * 55);
    text-align: center;
}

img.button-image {
    height: calc(var(--scale) * 2);
}

.menu-bottom-bottom-section.network-page {
    display: grid;
    grid-template-columns: calc(var(--scale) * 30) calc(var(--scale) * 30);
    grid-template-rows: calc(var(--scale) * 3) calc(var(--scale) * 3);
}

.menu#parameter-menu {
    width: calc(var(--scale) * 45);
    height: calc(var(--scale) * 20);
    /* display: grid; */
}

.menu#parameter-menu button.exit-button {
    font-size: calc(var(--scale) * 2.5);
    width: calc(var(--scale) * 5);
    margin-left: calc(var(--scale) * 10);
    text-align: center;
}

.menu#parameter-menu .menu-bottom-top-section {
    grid-template-columns: calc(var(--scale) * 15) calc(var(--scale) * 15) calc(var(--scale) * 15);
}

p {
    font-size: calc(var(--scale) * 2);
}

::-webkit-scrollbar {
    width: calc(var(--scale) * 0.75);
}

::-webkit-scrollbar-track {
    background-color: rgba(0, 0, 0, 0.25);
}

::-webkit-scrollbar-thumb {
    background-color: rgba(0, 0, 0, 0.5);
    border-radius: calc(var(--scale) * 0.5);
}

